--- a/build.gradle
+++ b/build.gradle
@@ -1,3 +1,4 @@
+//import org.elasticsearch.gradle.internal.info.BuildParams
 /*
  * Copyright Elasticsearch B.V. and/or licensed to Elasticsearch B.V. under one
  * or more contributor license agreements. Licensed under the Elastic License
@@ -5,51 +6,23 @@
  * in compliance with, at your election, the Elastic License 2.0 or the Server
  * Side Public License, v 1.
  */
-
-buildscript {
-    ext {
-        es_version = version.replaceAll(/\.[0-9]+$/, "")
-    }
-    repositories {
-        maven {
-            url = 'https://snapshots.elastic.co/maven/'
-        }
-        mavenCentral()
-    }
-    dependencies {
-        classpath "org.elasticsearch.gradle:build-tools:${es_version}"
-    }
-}
-
-apply plugin: 'java'
 apply plugin: 'elasticsearch.esplugin'
 apply plugin: 'elasticsearch.yaml-rest-test'
-
-tasks.withType(JavaCompile) {
-    options.compilerArgs << "-Xlint:unchecked,deprecation"
-}
+//apply plugin: 'elasticsearch.legacy-yaml-rest-test'
+//apply plugin: 'elasticsearch.legacy-yaml-rest-compat-test'
 
 // This plugin only has yaml rest tests
 test.enabled = false
 
 esplugin {
-    name pluginName
-    description pluginDescription
-    classname pluginClassname
+    name 'fastfilter-elasticsearch-plugin'
+    description 'Filter large lists of integers using RoaringBitmap'
+    classname 'org.elasticsearch.lsena.fastfilter.FastFilterPlugin'
     licenseFile rootProject.file("LICENSE.txt")
     noticeFile rootProject.file("NOTICE.txt")
 
 }
 
-allprojects {
-    repositories {
-      mavenCentral()
-    }
-}
-
 dependencies {
     implementation 'org.roaringbitmap:RoaringBitmap:0.9.35'
-
-    yamlRestTestImplementation "org.apache.logging.log4j:log4j-core:2.17.0"
-    yamlRestTestImplementation "org.elasticsearch.test:framework:$es_version"
 }
